[package]
name = "rbig"
version = "0.1.0"
edition = "2021"

[features]
default = ["num-traits-impls"]
num-traits-impls = ["num-traits", "ibig/num-traits"]

[dependencies]
ibig = { version = "0.3.5", default-features = false }
num-traits = { version = "0.2.14", optional = true, default-features = false }